Replace <div class='code-wrapper'> with <code>

--- a/box-model.html
+++ b/box-model.html
@@ -146,46 +146,39 @@
           </p>
           <h4>Apply box model properties</h4>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              h1 {<br>
-              &nbsp;&nbsp;padding-top: 6px;<br>
-              &nbsp;&nbsp;padding-right: 3px;<br>
-              &nbsp;&nbsp;padding-bottom: 1px;<br>
-              &nbsp;&nbsp;padding-left: 0;<br>
-              }
-            </p>
-            <p>
-              h1 {<br>
-              &nbsp;&nbsp;padding: 6px 3px 1px 0;<br>
-              }
-            </p>
-            <p>
-              h1 {<br>
-              &nbsp;&nbsp;border-width: 6px;<br>
-              &nbsp;&nbsp;border-style: solid;<br>
-              &nbsp;&nbsp;border-color: black;<br>
-              }
-            </p>
-            <p>
-              h1 {<br>
-              &nbsp;&nbsp;border: 6px solid black;<br>
-              }
-            </p>
-            <p>
-              h1 {<br>
-              &nbsp;&nbsp;margin-top: 6px;<br>
-              &nbsp;&nbsp;margin-right: 2px;<br>
-              &nbsp;&nbsp;margin-bottom: 3px;<br>
-              &nbsp;&nbsp;margin-left: 0;<br>
-              }
-            </p>
-            <p>
-              h1 {<br>
-              &nbsp;&nbsp;margin: 6px 2px 3px 0;<br>
-              }
-            </p>
-          </div>
+          <code>
+          	h1 {<br>
+            &nbsp;&nbsp;padding-top: 6px;<br>
+            &nbsp;&nbsp;padding-right: 3px;<br>
+            &nbsp;&nbsp;padding-bottom: 1px;<br>
+            &nbsp;&nbsp;padding-left: 0;<br>
+            }<br>
+            <br>
+            h1 {<br>
+            &nbsp;&nbsp;padding: 6px 3px 1px 0;<br>
+            }<br>
+            <br>
+            h1 {<br>
+            &nbsp;&nbsp;border-width: 6px;<br>
+            &nbsp;&nbsp;border-style: solid;<br>
+            &nbsp;&nbsp;border-color: black;<br>
+            }<br>
+            <br>
+           	h1 {<br>
+            &nbsp;&nbsp;border: 6px solid black;<br>
+            }<br>
+            <br>
+          	h1 {<br>
+            &nbsp;&nbsp;margin-top: 6px;<br>
+            &nbsp;&nbsp;margin-right: 2px;<br>
+            &nbsp;&nbsp;margin-bottom: 3px;<br>
+            &nbsp;&nbsp;margin-left: 0;<br>
+            }<br>
+            <br>
+            h1 {<br>
+            &nbsp;&nbsp;margin: 6px 2px 3px 0;<br>
+            }
+          </code>
         </section>
         <section>
           <h3>Browser defaults</h3>
