--- a/elements.html
+++ b/elements.html
@@ -107,36 +107,30 @@
 					<h4>Example</h4>
 					<p>Style the byline(author, date, avatar) of an article:</p>
 					<h5>HTML</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;div class="byline-wrapper"&gt;<br>
-							&nbsp;&nbsp;&lt;img src="images/avatar.png" alt="avatar" width="40px"&gt;<br>
-							&nbsp;&nbsp;&lt;p><br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;a href="mailto:pictureelement@yandex.com">PictureElement&lt;/a&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;br&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;time datetime="2017-02-28">Feb 28, 2017&lt;/time&gt;<br>
-							&nbsp;&nbsp;&lt;/p&gt;<br>
-							&lt;/div&gt;
-						</p>
-					</div>
+					<code>
+						&lt;div class="byline-wrapper"&gt;<br>
+						&nbsp;&nbsp;&lt;img src="images/avatar.png" alt="avatar" width="40px"&gt;<br>
+						&nbsp;&nbsp;&lt;p><br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;a href="mailto:pictureelement@yandex.com">PictureElement&lt;/a&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;br&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;time datetime="2017-02-28">Feb 28, 2017&lt;/time&gt;<br>
+						&nbsp;&nbsp;&lt;/p&gt;<br>
+						&lt;/div&gt;
+					</code>
 					<h5>CSS</h5>
-					<div class="code-wrapper">
-						<p>
-							.byline-wrapper {<br>
-							&nbsp;&nbsp;<i>declarations;</i><br>
-							}
-						</p>
-						<p>
-							.byline-wrapper img {<br>
-							&nbsp;&nbsp;<i>declarations;</i><br>
-							}
-						</p>
-						<p>
-							.byline-wrapper p {<br>
-							&nbsp;&nbsp;<i>declarations;</i><br>
-							}
-						</p>
-					</div>
+					<code>
+						.byline-wrapper {<br>
+						&nbsp;&nbsp;<i>declarations;</i><br>
+						}<br>
+						<br>
+						.byline-wrapper img {<br>
+						&nbsp;&nbsp;<i>declarations;</i><br>
+						}<br>
+						<br>
+						.byline-wrapper p {<br>
+						&nbsp;&nbsp;<i>declarations;</i><br>
+						}
+					</code>
 				</section>
 			</article>
 		</main>
