--- a/fonts.html
+++ b/fonts.html
@@ -104,13 +104,11 @@
           </p>
           <h4>Example</h4>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              <i>element</i> {<br>
-              &nbsp;&nbsp;font-family: Helvetica, Arial, "Times New Roman", sans-serif;<br>
-              }
-            </p>
-          </div>
+          <code>
+          	<i>element</i> {<br>
+            &nbsp;&nbsp;font-family: Helvetica, Arial, "Times New Roman", sans-serif;<br>
+            }
+          </code>
           <p>
             The first font in the list(i.e. <i>Helvetica</i>) represents the 
             ideal font that the browser will try to load first. The 
@@ -130,14 +128,12 @@
             order for us to improve upon:
           </p>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              <i>element</i> {<br>
-              &nbsp;&nbsp;font-size: 100%;<br>
-              &nbsp;&nbsp;font: inherit;<br>
-              }
-            </p>
-          </div>
+          <code>
+         		<i>element</i> {<br>
+            &nbsp;&nbsp;font-size: 100%;<br>
+            &nbsp;&nbsp;font: inherit;<br>
+            }
+          </code>
         </section>
         <section>
           <h3>font-style property</h3>
@@ -148,13 +144,11 @@
           </p>
           <h4>Usage</h4>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              <i>element</i> {<br>
-              &nbsp;&nbsp;font-style: <i>value</i>;<br>
-              }
-            </p>
-          </div>
+          <code>
+          	<i>element</i> {<br>
+            &nbsp;&nbsp;font-style: <i>value</i>;<br>
+            }
+          </code>
           <p>where <i>value</i> equals:</p>
           <ul>
           	<li><b>normal</b> - text is shown normally</li>
@@ -167,13 +161,11 @@
           <p>The <i>font-weight</i> property specifies the weight of a font.</p>
           <h4>Usage</h4>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              <i>element</i> {<br>
-              &nbsp;&nbsp;font-weight: <i>value</i>;<br>
-              }
-            </p>
-          </div>
+          <code>
+          	<i>element</i> {<br>
+           	&nbsp;&nbsp;font-weight: <i>value</i>;<br>
+            }
+          </code>
           <p>where <i>value</i> equals:</p>
           <ul>
             <li><b>normal</b> - standard weight(i.e. 400)</li>
@@ -189,13 +181,11 @@
           <p>The <i>font-size</i> property specifies the size of the font.</p>
           <h4>Usage</h4>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-            	<i>element</i> {<br>
-              &nbsp;&nbsp;font-size: <i>keyword</i> | <i>length</i> | <i>percentage</i>;<br>
-              }
-            </p>
-          </div>
+         	<code>
+          	<i>element</i> {<br>
+           	&nbsp;&nbsp;font-size: <i>keyword</i> | <i>length</i> | <i>percentage</i>;<br>
+            }
+          </code>
           <p>where:</p>
          	<ul>
           	<li>
@@ -237,13 +227,11 @@
           </p>
           <h4>Usage</h4>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              <i>element</i> {<br>
-              &nbsp;&nbsp;text-transform: <i>value</i>;<br>
-              }
-            </p>
-          </div>
+          <code>
+          	<i>element</i> {<br>
+           	&nbsp;&nbsp;text-transform: <i>value</i>;<br>
+            }
+          </code>
           <p>where <i>value</i> equals:</p>
           <ul>
           	<li><b>none</b> - no capitalization, text renders as it is(default).</li>
@@ -259,13 +247,11 @@
           <p>The <i>line-height</i> property specifies the line height.</p>
           <h4>Usage</h4>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              <i>element</i> {<br>
-              &nbsp;&nbsp;line-height: <i>value</i>;<br>
-              }
-            </p>
-          </div>
+          <code>
+          	<i>element</i> {<br>
+           	&nbsp;&nbsp;line-height: <i>value</i>;<br>
+            }
+          </code>
           <p>where <i>value</i> equals:</p>
           <ul>
           	<li><b>normal</b> - normal line height(default).</li>
@@ -284,44 +270,38 @@
           </p> 
           <h4>Example</h4>
           <h5>HTML</h5>
-          <div class="code-wrapper">
-            <p>
-              &lt;div class="green-box"&gt;<br>
-              &nbsp;&nbsp;&lt;h3&gt;Name: Marios Sofokleous&lt;/h3&gt;<br>
-              &nbsp;&nbsp;&lt;h3&gt;Date: Mar 17, 2017&lt;/h3&gt;<br>
-              &nbsp;&nbsp;&lt;p&gt;This is line number 1&lt;/p&gt;<br>
-              &nbsp;&nbsp;&lt;p&gt;This is line number 2&lt;/p&gt;<br>
-              &lt;/div&gt;
-            </p>
-            <p>
-              &lt;div class="red-box"&gt;<br>
-              &nbsp;&nbsp;&lt;h3&gt;Name: Marios Sofokleous&lt;/h3&gt;<br>
-              &nbsp;&nbsp;&lt;h3&gt;Date: Mar 17, 2017&lt;/h3&gt;<br>
-              &nbsp;&nbsp;&lt;p&gt;This is line number 1&lt;/p&gt;<br>
-              &nbsp;&nbsp;&lt;p&gt;This is line number 2&lt;/p&gt;<br>
-              &lt;/div&gt;
-            </p>
-          </div>
+          <code>
+            &lt;div class="green-box"&gt;<br>
+            &nbsp;&nbsp;&lt;h3&gt;Name: Marios Sofokleous&lt;/h3&gt;<br>
+            &nbsp;&nbsp;&lt;h3&gt;Date: Mar 17, 2017&lt;/h3&gt;<br>
+            &nbsp;&nbsp;&lt;p&gt;This is line number 1&lt;/p&gt;<br>
+            &nbsp;&nbsp;&lt;p&gt;This is line number 2&lt;/p&gt;<br>
+            &lt;/div&gt;<br>
+            <br>
+           	&lt;div class="red-box"&gt;<br>
+            &nbsp;&nbsp;&lt;h3&gt;Name: Marios Sofokleous&lt;/h3&gt;<br>
+            &nbsp;&nbsp;&lt;h3&gt;Date: Mar 17, 2017&lt;/h3&gt;<br>
+            &nbsp;&nbsp;&lt;p&gt;This is line number 1&lt;/p&gt;<br>
+            &nbsp;&nbsp;&lt;p&gt;This is line number 2&lt;/p&gt;<br>
+            &lt;/div&gt;
+          </code>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              /* Unitless number(preferred method) */<br>
-              .green-box {<br>
-              &nbsp;&nbsp;line-height: 1.5;<br>
-              &nbsp;&nbsp;border: solid green;<br>
-              &nbsp;&nbsp;display: inline-block;<br>
-              &nbsp;&nbsp;vertical-align: top;<br>
-              }
-            </p>
-            <p>
-              .red-box {<br>
-              &nbsp;&nbsp;line-height: 20px;<br>
-              &nbsp;&nbsp;border: solid red;<br>
-              &nbsp;&nbsp;display: inline-block;<br>
-              &nbsp;&nbsp;vertical-align: top;<br>
-              }
-            </p>
-          </div>
+          <code>
+          	/* Unitless number(preferred method) */<br>
+            .green-box {<br>
+            &nbsp;&nbsp;line-height: 1.5;<br>
+            &nbsp;&nbsp;border: solid green;<br>
+            &nbsp;&nbsp;display: inline-block;<br>
+            &nbsp;&nbsp;vertical-align: top;<br>
+            }<br>
+            <br>
+            .red-box {<br>
+            &nbsp;&nbsp;line-height: 20px;<br>
+            &nbsp;&nbsp;border: solid red;<br>
+            &nbsp;&nbsp;display: inline-block;<br>
+            &nbsp;&nbsp;vertical-align: top;<br>
+            }
+          </code>
           <h5>Result</h5>
           <div class="result-wrapper">
             <div class="green-box">
@@ -352,20 +332,16 @@
             use the <i>@import</i> method as follows:
           </p>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              /* Google Web Fonts: Sans Serif type */<br>
-              @import url('https://fonts.googleapis.com/css?family=Lato');
-            </p>
-            <p>
-              /* Google Web Fonts: Serif type */<br>
-              @import url('https://fonts.googleapis.com/css?family=Arvo');
-            </p>
-            <p>
-              /* Google Web Fonts: Monospace type */<br>
-              @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
-            </p>
-          </div>
+          <code>
+          	/* Google Web Fonts: Sans Serif type */<br>
+            @import url('https://fonts.googleapis.com/css?family=Lato');<br>
+            <br>
+            /* Google Web Fonts: Serif type */<br>
+            @import url('https://fonts.googleapis.com/css?family=Arvo');<br>
+            <br>
+            /* Google Web Fonts: Monospace type */<br>
+            @import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
+         	</code>
           <p>
             <b>Note:</b> <i>@import</i> rules <strong>must</strong> be placed at 
             the top of a stylesheet, before any other rules.
@@ -390,64 +366,55 @@
             have to create a new <i>@font-face</i> declaration :
           </p>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              @font-face {<br>
-              &nbsp;&nbsp;font-family: MySansSerif;<br>
-              &nbsp;&nbsp;src: url("fonts/Lato/Lato-Regular.ttf");<br>
-              &nbsp;&nbsp;font-style: normal;<br>
-              &nbsp;&nbsp;font-weight: normal;<br>
-              }
-            </p>
-            <p>
-              <i>element</i> {<br>
-              &nbsp;&nbsp;font-family: "MySansSerif", Helvetica, Arial;<br>
-              }
-            </p>
-          </div>
+          <code>
+          	@font-face {<br>
+            &nbsp;&nbsp;font-family: MySansSerif;<br>
+            &nbsp;&nbsp;src: url("fonts/Lato/Lato-Regular.ttf");<br>
+            &nbsp;&nbsp;font-style: normal;<br>
+            &nbsp;&nbsp;font-weight: normal;<br>
+            }<br>
+            <br>
+            <i>element</i> {<br>
+            &nbsp;&nbsp;font-family: "MySansSerif", Helvetica, Arial;<br>
+            }
+          </code>
           <p><b>Note:</b> *Helvetica, Arial are used as fallbacks.</p>
           <p>
             To add the bold version of "MySansSerif" in our stylesheet, we have 
             to create a new <i>@font-face</i> declaration :
           </p>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              @font-face {<br>
-              &nbsp;&nbsp;font-family: MySansSerif;<br>
-              &nbsp;&nbsp;src: url("fonts/Lato/Lato-Bold.ttf");<br>
-              &nbsp;&nbsp;font-style: normal;<br>
-              &nbsp;&nbsp;font-weight: bold;<br>
-              }
-            </p>
-            <p>
-              <i>element</i> {<br>
-              &nbsp;&nbsp;font-family: "MySansSerif", Helvetica, Arial;<br>
-              &nbsp;&nbsp;font-weight: bold;<br>
-              }
-            </p>
-          </div>
+          <code>
+           	@font-face {<br>
+            &nbsp;&nbsp;font-family: MySansSerif;<br>
+            &nbsp;&nbsp;src: url("fonts/Lato/Lato-Bold.ttf");<br>
+            &nbsp;&nbsp;font-style: normal;<br>
+            &nbsp;&nbsp;font-weight: bold;<br>
+            }<br>
+            <br>
+           	<i>element</i> {<br>
+            &nbsp;&nbsp;font-family: "MySansSerif", Helvetica, Arial;<br>
+            &nbsp;&nbsp;font-weight: bold;<br>
+            }
+          </code>
           <p>
             To add the italic version of "MySansSerif" in our stylesheet, we 
             have to create a new <i>@font-face</i> declaration :
           </p>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              @font-face {<br>
-              &nbsp;&nbsp;font-family: MySansSerif;<br>
-              &nbsp;&nbsp;src: url("fonts/Lato/Lato-Italic.ttf");<br>
-              &nbsp;&nbsp;font-style: italic;<br>
-              &nbsp;&nbsp;font-weight: normal;<br>
-              }
-            </p>
-            <p>
-              <i>element</i> {<br>
-              &nbsp;&nbsp;font-family: "MySansSerif", Helvetica, Arial;<br>
-              &nbsp;&nbsp;font-style: italic;<br>
-              }
-            </p>
-          </div>
+          <code>
+           	@font-face {<br>
+           	&nbsp;&nbsp;font-family: MySansSerif;<br>
+            &nbsp;&nbsp;src: url("fonts/Lato/Lato-Italic.ttf");<br>
+            &nbsp;&nbsp;font-style: italic;<br>
+            &nbsp;&nbsp;font-weight: normal;<br>
+            }<br>
+           	<br>
+          	<i>element</i> {<br>
+            &nbsp;&nbsp;font-family: "MySansSerif", Helvetica, Arial;<br>
+            &nbsp;&nbsp;font-style: italic;<br>
+            }
+         	</code>
         </section>
         <section>
           <h3>Font Types</h3>
