--- a/new-form-elements.html
+++ b/new-form-elements.html
@@ -103,21 +103,19 @@
 					</p> 
 					<h4>Example:</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Choose an OS:<br>
-							&nbsp;&nbsp;&lt;input list="operating-systems"&gt;<br>
-							&nbsp;&nbsp;&lt;datalist id="operating-systems"&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="Windows"&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="macOS"&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="Linux"&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="Solaris"&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="FreeBSD"&gt;<br>
-							&nbsp;&nbsp;&lt;/datalist&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Choose an OS:<br>
+						&nbsp;&nbsp;&lt;input list="operating-systems"&gt;<br>
+						&nbsp;&nbsp;&lt;datalist id="operating-systems"&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="Windows"&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="macOS"&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="Linux"&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="Solaris"&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="FreeBSD"&gt;<br>
+						&nbsp;&nbsp;&lt;/datalist&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<p>
 						<i class="notice">Notice:</i> The "list" and "id" attributes need to 
 						be the same. The &lt;input&gt; element needs to know about the 
