--- a/new-input-types.html
+++ b/new-input-types.html
@@ -102,14 +102,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Search Google:<br>
-							&nbsp;&nbsp;&lt;input type="search" name="google-search"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Search Google:<br>
+						&nbsp;&nbsp;&lt;input type="search" name="google-search"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -127,14 +125,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;E-mail:<br>
-							&nbsp;&nbsp;&lt;input type="email" name="email"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;E-mail:<br>
+						&nbsp;&nbsp;&lt;input type="email" name="email"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">		
 						<form>
@@ -152,14 +148,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Add your homepage:<br>
-							&nbsp;&nbsp;&lt;input type="url" name="homepage"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>				
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Add your homepage:<br>
+						&nbsp;&nbsp;&lt;input type="url" name="homepage"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -177,14 +171,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Telephone:<br>
-							&nbsp;&nbsp;&lt;input type="tel" name="usrtel"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Telephone:<br>
+						&nbsp;&nbsp;&lt;input type="tel" name="usrtel"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -205,15 +197,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Enter a number (between 1 and 5):<br>
-							&nbsp;&nbsp;&lt;input type="number" name="number" min="1" 
-							max="5"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Enter a number (between 1 and 5):<br>
+						&nbsp;&nbsp;&lt;input type="number" name="number" min="1" max="5"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -233,15 +222,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;&lt;p&gt;Range (0-50):&lt;/p&gt;<br>
-							&nbsp;&nbsp;&lt;input type="range" name="points" min="0" 
-							max="50"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;&lt;p&gt;Range (0-50):&lt;/p&gt;<br>
+						&nbsp;&nbsp;&lt;input type="range" name="points" min="0" max="50"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -259,14 +245,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Select a month:<br>
-							&nbsp;&nbsp;&lt;input type="month" name="month-year"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Select a month:<br>
+						&nbsp;&nbsp;&lt;input type="month" name="month-year"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -284,14 +268,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Select a week:<br>
-							&nbsp;&nbsp;&lt;input type="week" name="week-year"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Select a week:<br>
+						&nbsp;&nbsp;&lt;input type="week" name="week-year"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -309,14 +291,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Birthday:<br>
-							&nbsp;&nbsp;&lt;input type="date" name="birthday"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Birthday:<br>
+						&nbsp;&nbsp;&lt;input type="date" name="birthday"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -335,14 +315,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Exam (date and time):<br>
-							&nbsp;&nbsp;&lt;input type="datetime-local" name="exam-time"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Exam (date and time):<br>
+						&nbsp;&nbsp;&lt;input type="datetime-local" name="exam-time"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -360,14 +338,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Exam (date and time):<br>
-							&nbsp;&nbsp;&lt;input type="datetime" name="exam-time"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Exam (date and time):<br>
+						&nbsp;&nbsp;&lt;input type="datetime" name="exam-time"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -389,14 +365,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Select a time:<br>
-							&nbsp;&nbsp;&lt;input type="time" name="usrtime"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Select a time:<br>
+						&nbsp;&nbsp;&lt;input type="time" name="usrtime"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -414,14 +388,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Pick a color:<br>
-							&nbsp;&nbsp;&lt;input type="color" name="usrcolor"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Pick a color:<br>
+						&nbsp;&nbsp;&lt;input type="color" name="usrcolor"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
