--- a/selectors.html
+++ b/selectors.html
@@ -102,13 +102,11 @@
           </p>
           <h4>Example</h4>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              ul li {<br>
-              &nbsp;&nbsp;font-size: 24px;<br>
-              }
-            </p>
-          </div>
+          <code>
+          	ul li {<br>
+           	&nbsp;&nbsp;font-size: 24px;<br>
+            }
+          </code>
           <p>
             The CSS rule above selects only &lt;li&gt; tags that are children of 
             &lt;ul&gt; tags.
@@ -129,19 +127,16 @@
             		applied when the mouse is hovering over the link:
             	</p>
             	<h5>CSS</h5>
-     					<div class="code-wrapper">
-		            <p>
-		              a {<br>
-		              &nbsp;&nbsp;text-decoration: none;<br>
-		              }
-		            </p>
-		            <p>
-		              a:hover {<br>
-		              &nbsp;&nbsp;text-decoration: underline;<br>
-		              &nbsp;&nbsp;color: darkred;<br>
-		              }
-		            </p>
-		         	</div>
+     					<code>
+		  					a {<br>
+		           	&nbsp;&nbsp;text-decoration: none;<br>
+		            }<br>
+		            <br>
+		          	a:hover {<br>
+		           	&nbsp;&nbsp;text-decoration: underline;<br>
+		           	&nbsp;&nbsp;color: darkred;<br>
+		            }
+		          </code>
 		        </li>
 	         	<li>
 	         		<p>
@@ -150,24 +145,20 @@
             		"2 eggs" line:
             	</p>
           		<h5>HTML</h5>
-	          	<div class="code-wrapper">
-		            <p>
-		              ...<br>
-		              &lt;ul&gt;<br>
-		              &nbsp;&nbsp;&lt;li&gt;2 egss&lt;/li&gt;<br>
-		              &nbsp;&nbsp;&lt;li&gt;1 pound of sugar&lt;/li&gt;<br>
-		              &lt;/ul&gt;<br>
-		              ...
-		            </p>
-	          	</div>
+	          	<code>
+		      			...<br>
+		            &lt;ul&gt;<br>
+		            &nbsp;&nbsp;&lt;li&gt;2 egss&lt;/li&gt;<br>
+		            &nbsp;&nbsp;&lt;li&gt;1 pound of sugar&lt;/li&gt;<br>
+		            &lt;/ul&gt;<br>
+		            ...
+		         	</code>
 							<h5>CSS</h5>
-		          <div class="code-wrapper">
-		            <p>
-		              ul li:first-child {<br>
-		              &nbsp;&nbsp;color: red;<br>
-		              }
-		            </p>
-		          </div>
+		          <code>
+		        		ul li:first-child {<br>
+		           	&nbsp;&nbsp;color: red;<br>
+		        		}
+		          </code>
 		        </li>
 		      </ol>
         </section>
@@ -179,35 +170,29 @@
           </p>
           <h4>Syntax</h4>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-          	<p>
-          		<i>.class</i> {<br>
-          		&nbsp;&nbsp;<i>declarations;</i><br>
-          		}
-          	</p>
-          </div>
+          <code>
+   					<i>.class</i> {<br>
+          	&nbsp;&nbsp;<i>declarations;</i><br>
+          	}
+         	</code>
           <h4>Examples</h4>
        		<ol>
      				<li>
      					<p>Select and style only one &lt;ul&gt;:</p>
 	     				<h5>HTML</h5>
-	     				<div class="code-wrapper">
-			        	<p>
-				          &lt;ul class="nav"&gt;<br>
-									&nbsp;&nbsp;&lt;li&gt;&lt;a href="home.html"&gt;Home&lt;/a&gt;&lt;/li&gt;<br>
-									&nbsp;&nbsp;&lt;li&gt;&lt;a href="recipes.html"&gt;Recipes&lt;/a&gt;&lt;/li&gt;<br>
-									&nbsp;&nbsp;&lt;li&gt;&lt;a href="suggest.html"&gt;Suggest&lt;/a&gt;&lt;/li&gt;<br>
-					  			&lt;/ul&gt;
-					  		</p>
-					  	</div>
+	     				<code>
+			       		&lt;ul class="nav"&gt;<br>
+								&nbsp;&nbsp;&lt;li&gt;&lt;a href="home.html"&gt;Home&lt;/a&gt;&lt;/li&gt;<br>
+								&nbsp;&nbsp;&lt;li&gt;&lt;a href="recipes.html"&gt;Recipes&lt;/a&gt;&lt;/li&gt;<br>
+								&nbsp;&nbsp;&lt;li&gt;&lt;a href="suggest.html"&gt;Suggest&lt;/a&gt;&lt;/li&gt;<br>
+					  		&lt;/ul&gt;
+					  	</code>
 				  		<h5>CSS</h5>
-				  		<div class="code-wrapper">
-				  			<p>
-				  				.nav {<br>
-				  				&nbsp;&nbsp;<i>declarations;</i><br>
-				  				}
-				  			</p>
-			  			</div>
+				  		<code>
+				  			.nav {<br>
+				  			&nbsp;&nbsp;<i>declarations;</i><br>
+				  			}
+				  		</code>
 			  		</li>
 		  			<li>
 		  				<p>
@@ -215,56 +200,47 @@
 		  					&lt;ul&gt; tag with a class of <i>nav</i>:
 		  				</p>
 			  			<h5>HTML</h5>
-	     				<div class="code-wrapper">
-			        	<p>
-				          &lt;ul class="nav"&gt;<br>
-									&nbsp;&nbsp;&lt;li&gt;&lt;a href="home.html"&gt;Home&lt;/a&gt;&lt;/li&gt;<br>
-									&nbsp;&nbsp;&lt;li&gt;&lt;a href="recipes.html"&gt;Recipes&lt;/a&gt;&lt;/li&gt;<br>
-									&nbsp;&nbsp;&lt;li&gt;&lt;a href="suggest.html"&gt;Suggest&lt;/a&gt;&lt;/li&gt;<br>
-					  			&lt;/ul&gt;
-					  		</p>
-					  	</div>
+	     				<code>
+			   				&lt;ul class="nav"&gt;<br>
+								&nbsp;&nbsp;&lt;li&gt;&lt;a href="home.html"&gt;Home&lt;/a&gt;&lt;/li&gt;<br>
+								&nbsp;&nbsp;&lt;li&gt;&lt;a href="recipes.html"&gt;Recipes&lt;/a&gt;&lt;/li&gt;<br>
+								&nbsp;&nbsp;&lt;li&gt;&lt;a href="suggest.html"&gt;Suggest&lt;/a&gt;&lt;/li&gt;<br>
+					  		&lt;/ul&gt;
+					  	</code>
 					  	<h5>CSS</h5>
-				  		<div class="code-wrapper">
-				  			<p>
-				  				.nav a {<br>
-								 	&nbsp;&nbsp;<i>declarations;</i><br>
-									}
-								</p>
-							</div>
+				  		<code>				  	
+				  			.nav a {<br>
+								&nbsp;&nbsp;<i>declarations;</i><br>
+								}
+							</code>
 						</li>
 						<li>
 							<p>We want only the navigation list to display inline:</p>
 							<h5>HTML</h5>
-	     				<div class="code-wrapper">
-			        	<p>
-				          &lt;ul class="nav"&gt;<br>
-									&nbsp;&nbsp;&lt;li&gt;&lt;a href="home.html"&gt;Home&lt;/a&gt;&lt;/li&gt;<br>
-									&nbsp;&nbsp;&lt;li&gt;&lt;a href="recipes.html"&gt;Recipes&lt;/a&gt;&lt;/li&gt;<br>
-									&nbsp;&nbsp;&lt;li&gt;&lt;a href="suggest.html"&gt;Suggest&lt;/a&gt;&lt;/li&gt;<br>
-					  			&lt;/ul&gt;
-					  		</p>
-					  		<p>
-									&lt;ul&gt;<br>
-									&nbsp;&nbsp;&lt;li&gt;2 eggs&lt;/li&gt;<br>
-		  						&nbsp;&nbsp;&lt;li&gt;1 pound of brown sugar&lt;/li&gt;<br>
-	      					&nbsp;&nbsp;&lt;li&gt;3 sticks of butter&lt;/li&gt;<br>
-									&lt;/ul&gt;
-								</p>
-							</div>
+	     				<code>
+			       		&lt;ul class="nav"&gt;<br>
+								&nbsp;&nbsp;&lt;li&gt;&lt;a href="home.html"&gt;Home&lt;/a&gt;&lt;/li&gt;<br>
+								&nbsp;&nbsp;&lt;li&gt;&lt;a href="recipes.html"&gt;Recipes&lt;/a&gt;&lt;/li&gt;<br>
+								&nbsp;&nbsp;&lt;li&gt;&lt;a href="suggest.html"&gt;Suggest&lt;/a&gt;&lt;/li&gt;<br>
+					  		&lt;/ul&gt;<br>
+					  		<br>
+					  		&lt;ul&gt;<br>
+								&nbsp;&nbsp;&lt;li&gt;2 eggs&lt;/li&gt;<br>
+		  					&nbsp;&nbsp;&lt;li&gt;1 pound of brown sugar&lt;/li&gt;<br>
+	      				&nbsp;&nbsp;&lt;li&gt;3 sticks of butter&lt;/li&gt;<br>
+								&lt;/ul&gt;
+							</code>
 							<h5>CSS</h5>
-	     				<div class="code-wrapper">
-			        	<p>
-			        		/*<br> 
-			        		Select &lt;li&gt; elements that are children of &lt;ul&gt; 
-			        		elements with a class of <i>nav</i> and make them display 
-			        		inline.<br> 
-			        		*/<br>
-			        		.nav li {<br>
-						      &nbsp;&nbsp;display: inline;<br>
-						    	}
-						    </p>
-						  </div>
+	     				<code>
+			        	/*<br> 
+			        	Select &lt;li&gt; elements that are children of &lt;ul&gt; 
+			        	elements with a class of <i>nav</i> and make them display 
+			        	inline.<br> 
+			        	*/<br>
+			        	.nav li {<br>
+						     &nbsp;&nbsp;display: inline;<br>
+						    }
+						  </code>
 						</li>
 					  <li>
 					  	<p>
@@ -274,19 +250,15 @@
 						  	contains the creator name:
 						  </p>
 						  <h5>HTML</h5>
-	     				<div class="code-wrapper">
-	     					<p>
-			        		&lt;p class="creator"&gt;creator: Marios Sofokleous&lt;/p&gt;
-			        	</p>
-			        </div>
+	     				<code>
+	     					&lt;p class="creator"&gt;creator: Marios Sofokleous&lt;/p&gt;
+			       	</code>
 			        <h5>CSS</h5>
-	     				<div class="code-wrapper">
-			        	<p>
-			        		.creator {<br>
-									&nbsp;&nbsp;<i>declarations;</i><br>
-									}
-								</p>
-							</div>
+	     				<code>
+			        	.creator {<br>
+								&nbsp;&nbsp;<i>declarations;</i><br>
+								}
+							</code>
 						</li>
 					</ol>
 				</section>
