--- a/styles.html
+++ b/styles.html
@@ -105,23 +105,19 @@
           	<li>
           		<p>top-left&bottom-right&top-right&bottom-left</p>
 		          <h5>HTML</h5>
-		          <div class="code-wrapper">
-		          	<p>
-				          &lt;div class="border-radius-1"&gt;<br>
-					      	&lt;/div&gt;
-				      	</p>
-				      </div>
+		          <code>
+		          	&lt;div class="border-radius-1"&gt;<br>
+					     	&lt;/div&gt;
+				      </code>
 				      <h5>CSS</h5>
-				      <div class="code-wrapper">
-				      	<p>
-				      		.border-radius-1 {<br>
-									&nbsp;&nbsp;height: 100px;<br>
-									&nbsp;&nbsp;width: 200px;<br>
-									&nbsp;&nbsp;border: 5px solid red;<br>
-									&nbsp;&nbsp;border-radius: 25px;<br>
-									}
-								</p>
-							</div>
+				      <code>
+				      	.border-radius-1 {<br>
+								&nbsp;&nbsp;height: 100px;<br>
+								&nbsp;&nbsp;width: 200px;<br>
+								&nbsp;&nbsp;border: 5px solid red;<br>
+								&nbsp;&nbsp;border-radius: 25px;<br>
+								}
+							</code>
 		          <h5>Result</h5>
 		          <div class="result-wrapper">
 			          <div class="border-radius-1">
@@ -131,23 +127,19 @@
 				    <li>
 				    	<p>top-left&bottom-right | top-right&bottom-left</p>
 		          <h5>HTML</h5>
-		          <div class="code-wrapper">
-		          	<p>
-				          &lt;div class="border-radius-2"&gt;<br>
-					      	&lt;/div&gt;
-				      	</p>
-				      </div>
+		          <code>
+		          	&lt;div class="border-radius-2"&gt;<br>
+					      &lt;/div&gt;
+				      </code>
 				      <h5>CSS</h5>
-				      <div class="code-wrapper">
-				      	<p>
-				      		.border-radius-2 {<br>
-									&nbsp;&nbsp;height: 100px;<br>
-									&nbsp;&nbsp;width: 200px;<br>
-									&nbsp;&nbsp;border: 5px solid red;<br>
-									&nbsp;&nbsp;border-radius: 25px 50px;<br>
-									}
-								</p>
-							</div>
+				      <code>
+				      	.border-radius-2 {<br>
+								&nbsp;&nbsp;height: 100px;<br>
+								&nbsp;&nbsp;width: 200px;<br>
+								&nbsp;&nbsp;border: 5px solid red;<br>
+								&nbsp;&nbsp;border-radius: 25px 50px;<br>
+								}
+							</code>
 							<h5>Result</h5>
 		          <div class="result-wrapper">
 			          <div class="border-radius-2">
@@ -157,23 +149,19 @@
 				    <li>
 				    	<p>top-left | top-right&bottom-left | bottom-right</p>
 		          <h5>HTML</h5>
-		          <div class="code-wrapper">
-		          	<p>
-				          &lt;div class="border-radius-3"&gt;<br>
-					      	&lt;/div&gt;
-				      	</p>
-				      </div>
+		          <code>
+		          	&lt;div class="border-radius-3"&gt;<br>
+					     	&lt;/div&gt;
+				      </code>
 				      <h5>CSS</h5>
-				      <div class="code-wrapper">
-				      	<p>
-				      		.border-radius-3 {<br>
-									&nbsp;&nbsp;height: 100px;<br>
-									&nbsp;&nbsp;width: 200px;<br>
-									&nbsp;&nbsp;border: 5px solid red;<br>
-									&nbsp;&nbsp;border-radius: 20px 40px 60px;<br>
-									}
-								</p>
-							</div>
+				      <code>
+				      	.border-radius-3 {<br>
+								&nbsp;&nbsp;height: 100px;<br>
+								&nbsp;&nbsp;width: 200px;<br>
+								&nbsp;&nbsp;border: 5px solid red;<br>
+								&nbsp;&nbsp;border-radius: 20px 40px 60px;<br>
+								}
+							</code>
 							<h5>Result</h5>
 		          <div class="result-wrapper">
 			          <div class="border-radius-3">
@@ -183,32 +171,28 @@
 				    <li>
 				    	<p>top-left | top-right | bottom-right | bottom-left</p>
 		          <h5>HTML</h5>
-		          <div class="code-wrapper">
-		          	<p>
-				          &lt;div class="border-radius-4"&gt;<br>
-					      	&lt;/div&gt;
-				      	</p>
-				      </div>
+		          <code>
+				      	&lt;div class="border-radius-4"&gt;<br>
+					     	&lt;/div&gt;
+				      </code>
 				      <h5>CSS</h5>
-				      <div class="code-wrapper">
-				      	<p>
-				      		.border-radius-4 {<br>
-									&nbsp;&nbsp;height: 100px;<br>
-									&nbsp;&nbsp;width: 200px;<br>
-									&nbsp;&nbsp;border: 5px solid red;<br>
-									&nbsp;&nbsp;border-radius: 10px 20px 30px 40px;<br>
-									}
-								</p>
-								<p><b>equivalent to:</b></p>
-								<p>
-									.border-radius-4 {<br>
-									&nbsp;&nbsp;border-top-left-radius: 10px;<br>
-									&nbsp;&nbsp;border-top-right-radius: 20px;<br>
-									&nbsp;&nbsp;border-bottom-right-radius: 30px;<br>
-									&nbsp;&nbsp;border-bottom-left-radius: 40px;<br>
-									}
-								</p>
-							</div>
+				      <code>
+				     		.border-radius-4 {<br>
+								&nbsp;&nbsp;height: 100px;<br>
+								&nbsp;&nbsp;width: 200px;<br>
+								&nbsp;&nbsp;border: 5px solid red;<br>
+								&nbsp;&nbsp;border-radius: 10px 20px 30px 40px;<br>
+								}<br>
+								<br>
+								<b>/* equivalent to: */</b><br>
+								<br>
+								.border-radius-4 {<br>
+								&nbsp;&nbsp;border-top-left-radius: 10px;<br>
+								&nbsp;&nbsp;border-top-right-radius: 20px;<br>
+								&nbsp;&nbsp;border-bottom-right-radius: 30px;<br>
+								&nbsp;&nbsp;border-bottom-left-radius: 40px;<br>
+								}
+							</code>
 							<h5>Result</h5>
 		          <div class="result-wrapper">
 			          <div class="border-radius-4">
@@ -222,32 +206,28 @@
 				    	</p>
 				    	<img src="images/30-60.png" alt="border-radius slash syntax 1" width="300">
 		          <h5>HTML</h5>
-		          <div class="code-wrapper">
-		          	<p>
-				          &lt;div class="border-radius-5"&gt;<br>
-					      	&lt;/div&gt;
-				      	</p>
-				      </div>
+		          <code>
+		          	&lt;div class="border-radius-5"&gt;<br>
+					     	&lt;/div&gt;
+				      </code>
 				      <h5>CSS</h5>
-				      <div class="code-wrapper">
-				      	<p>
-				      		.border-radius-5 {<br>
-									&nbsp;&nbsp;height: 100px;<br>
-									&nbsp;&nbsp;width: 200px;<br>
-									&nbsp;&nbsp;border: 5px solid red;<br>
-									&nbsp;&nbsp;border-radius: 30px/60px;<br>
-									}
-								</p>
-								<p><b>equivalent to:</b></p>
-								<p>
-									.border-radius-5 {<br>
-									&nbsp;&nbsp;border-top-left-radius: 30px 60px;<br>
-									&nbsp;&nbsp;border-top-right-radius: 30px 60px;<br>
-									&nbsp;&nbsp;border-bottom-right-radius: 30px 60px;<br>
-									&nbsp;&nbsp;border-bottom-left-radius: 30px 60px;<br>
-									}
-								</p>
-							</div>
+				      <code>
+				      	.border-radius-5 {<br>
+								&nbsp;&nbsp;height: 100px;<br>
+								&nbsp;&nbsp;width: 200px;<br>
+								&nbsp;&nbsp;border: 5px solid red;<br>
+								&nbsp;&nbsp;border-radius: 30px/60px;<br>
+								}<br>
+								<br>
+								<b>equivalent to:</b><br>
+								<br>
+								.border-radius-5 {<br>
+								&nbsp;&nbsp;border-top-left-radius: 30px 60px;<br>
+								&nbsp;&nbsp;border-top-right-radius: 30px 60px;<br>
+								&nbsp;&nbsp;border-bottom-right-radius: 30px 60px;<br>
+								&nbsp;&nbsp;border-bottom-left-radius: 30px 60px;<br>
+								}
+							</code>
 							<h5>Result</h5>
 		          <div class="result-wrapper">
 			          <div class="border-radius-5">
@@ -261,32 +241,28 @@
 				    	</p>
 				    	 <img src="images/60-30.png" alt="border-radius slash syntax 2" width="300">
 		          <h5>HTML</h5>
-		          <div class="code-wrapper">
-		          	<p>
-				          &lt;div class="border-radius-6"&gt;<br>
-					      	&lt;/div&gt;
-				      	</p>
-				      </div>
+		          <code>
+		          	&lt;div class="border-radius-6"&gt;<br>
+					      &lt;/div&gt;
+				      </code>
 				      <h5>CSS</h5>
-				      <div class="code-wrapper">
-				      	<p>
-				      		.border-radius-6 {<br>
-									&nbsp;&nbsp;height: 100px;<br>
-									&nbsp;&nbsp;width: 200px;<br>
-									&nbsp;&nbsp;border: 5px solid red;<br>
-									&nbsp;&nbsp;border-radius: 60px/30px;<br>
-									}
-								</p>
-								<p><b>equivalent to:</b></p>
-								<p>
-									.border-radius-6 {<br>
-									&nbsp;&nbsp;border-top-left-radius: 60px 30px;<br>
-									&nbsp;&nbsp;border-top-right-radius: 60px 30px;<br>
-									&nbsp;&nbsp;border-bottom-right-radius: 60px 30px;<br>
-									&nbsp;&nbsp;border-bottom-left-radius: 60px 30px;<br>
-									}
-								</p>
-							</div>
+				      <code>
+				      	.border-radius-6 {<br>
+								&nbsp;&nbsp;height: 100px;<br>
+								&nbsp;&nbsp;width: 200px;<br>
+								&nbsp;&nbsp;border: 5px solid red;<br>
+								&nbsp;&nbsp;border-radius: 60px/30px;<br>
+								}<br>
+								<br>
+								<b>equivalent to:</b><br>
+								<br>
+								.border-radius-6 {<br>
+								&nbsp;&nbsp;border-top-left-radius: 60px 30px;<br>
+								&nbsp;&nbsp;border-top-right-radius: 60px 30px;<br>
+								&nbsp;&nbsp;border-bottom-right-radius: 60px 30px;<br>
+								&nbsp;&nbsp;border-bottom-left-radius: 60px 30px;<br>
+								}
+							</code>
 							<h5>Result</h5>
 		          <div class="result-wrapper">
 			          <div class="border-radius-6">
@@ -296,23 +272,19 @@
 				    <li>
 				    	<p>Oval shape</p>
 		          <h5>HTML</h5>
-		          <div class="code-wrapper">
-		          	<p>
-				          &lt;div class="border-radius-7"&gt;<br>
-					      	&lt;/div&gt;
-				      	</p>
-				      </div>
+		          <code>
+				      	&lt;div class="border-radius-7"&gt;<br>
+					     	&lt;/div&gt;
+				      </code>
 				      <h5>CSS</h5>
-				      <div class="code-wrapper">
-				      	<p>
-				      		.border-radius-7 {<br>
-									&nbsp;&nbsp;height: 100px;<br>
-									&nbsp;&nbsp;width: 200px;<br>
-									&nbsp;&nbsp;border: 5px solid red;<br>
-									&nbsp;&nbsp;border-radius: 50%;<br>
-									}
-								</p>
-							</div>
+				      <code>
+				      	.border-radius-7 {<br>
+								&nbsp;&nbsp;height: 100px;<br>
+								&nbsp;&nbsp;width: 200px;<br>
+								&nbsp;&nbsp;border: 5px solid red;<br>
+								&nbsp;&nbsp;border-radius: 50%;<br>
+								}
+							</code>
 							<h5>Result</h5>
 		          <div class="result-wrapper">
 			          <div class="border-radius-7">
@@ -322,23 +294,19 @@
 				    <li>
 				    	<p>Circle shape</p>
 		          <h5>HTML</h5>
-		          <div class="code-wrapper">
-		          	<p>
-				          &lt;div class="border-radius-8"&gt;<br>
-					      	&lt;/div&gt;
-				      	</p>
-				      </div>
+		          <code>
+		          	&lt;div class="border-radius-8"&gt;<br>
+					      &lt;/div&gt;
+				     	</code>
 				      <h5>CSS</h5>
-				      <div class="code-wrapper">
-				      	<p>
-				      		.border-radius-8 {<br>
-									&nbsp;&nbsp;height: 200px;<br>
-									&nbsp;&nbsp;width: 200px;<br>
-									&nbsp;&nbsp;border: 5px solid red;<br>
-									&nbsp;&nbsp;border-radius: 50%;<br>
-									}
-								</p>
-							</div>
+				      <code>
+				      	.border-radius-8 {<br>
+								&nbsp;&nbsp;height: 200px;<br>
+								&nbsp;&nbsp;width: 200px;<br>
+								&nbsp;&nbsp;border: 5px solid red;<br>
+								&nbsp;&nbsp;border-radius: 50%;<br>
+								}
+							</code>
 							<h5>Result</h5>
 		          <div class="result-wrapper">
 			          <div class="border-radius-8">
@@ -355,11 +323,9 @@
           	shadows from the frame of almost any element.
           </p>
           <h4>Syntax</h4>
-          <div class="code-wrapper">
-          	<p>
-          		box-shadow: inset <i>offset-x offset-y blur-radius spread-radius color</i>
-          	</p>
-          </div>
+          <code>
+         		box-shadow: inset <i>offset-x offset-y blur-radius spread-radius color</i>
+          </code>
           <p>where:</p>
           <ul>
           	<li>
@@ -441,13 +407,11 @@
           		<p>
           			Inset and outset/drop shadow combination:
           		</p>
-          		<div class="code-wrapper">
-          			<p>
-          				box-shadow:<br>
-									&nbsp;&nbsp;inset 5px 10px 5px gray,<br>
-									&nbsp;&nbsp;5px 10px 5px black;
-								</p>
-							</div>
+          		<code>
+          			box-shadow:<br>
+								&nbsp;&nbsp;inset 5px 10px 5px gray,<br>
+								&nbsp;&nbsp;5px 10px 5px black;
+							</code>
           		<div class="box-shadow-9">
           		</div>
           	</li>
@@ -455,20 +419,18 @@
           		<p>
           			Specify multiple box shadows:
           		</p>
-          		<div class="code-wrapper">
-          			<p>
-          				box-shadow:<br>
-          				&nbsp;&nbsp;0 0 10px black,<br>
-									&nbsp;&nbsp;/* x: right, y: down */<br>
-									&nbsp;&nbsp;10px 5px yellow,<br>
-									&nbsp;&nbsp;/* x: left, y: down */<br>
-									&nbsp;&nbsp;-10px 5px red,<br>
-									&nbsp;&nbsp;/* x: left, y: up */<br>
-									&nbsp;&nbsp;-10px -5px blue,<br>
-									&nbsp;&nbsp;/* x: right, y: up */<br>
-									&nbsp;&nbsp;10px -5px lime;
-								</p>
-							</div>
+          		<code>
+       					box-shadow:<br>
+          			&nbsp;&nbsp;0 0 10px black,<br>
+								&nbsp;&nbsp;/* x: right, y: down */<br>
+								&nbsp;&nbsp;10px 5px yellow,<br>
+								&nbsp;&nbsp;/* x: left, y: down */<br>
+								&nbsp;&nbsp;-10px 5px red,<br>
+								&nbsp;&nbsp;/* x: left, y: up */<br>
+								&nbsp;&nbsp;-10px -5px blue,<br>
+								&nbsp;&nbsp;/* x: right, y: up */<br>
+								&nbsp;&nbsp;10px -5px lime;
+							</code>
           		<div class="box-shadow-10">
           		</div>
           	</li>
