--- a/updated-elements.html
+++ b/updated-elements.html
@@ -95,23 +95,21 @@
 				</header>
 				<section>
 					<h4>Example:</h4>
-					<div class="code-wrapper">
-						<p>
-							&lt;!DOCTYPE html&gt; (1)<br>
-							&lt;html&gt;<br>
-							&nbsp;&nbsp;&lt;head&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;meta charset="UTF-8"&gt; (2)<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;link rel="stylesheet" href="foo.css"&gt; 
-							(3)<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;script src="foo.js"&gt;&lt;/script&gt; (4.1)<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;script&gt;<i>JS code</i>&lt;/script&gt; 
-							(4.2)<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;...<br>
-							&nbsp;&nbsp;&lt;/head&gt;<br>
-							&nbsp;&nbsp;...<br>
-							&lt;/html&gt;
-						</p>
-					</div>
+					<code>
+						&lt;!DOCTYPE html&gt; (1)<br>
+						&lt;html&gt;<br>
+						&nbsp;&nbsp;&lt;head&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;meta charset="UTF-8"&gt; (2)<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;link rel="stylesheet" href="foo.css"&gt; 
+						(3)<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;script src="foo.js"&gt;&lt;/script&gt; (4.1)<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;script&gt;<i>JS code</i>&lt;/script&gt; 
+						(4.2)<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;...<br>
+						&nbsp;&nbsp;&lt;/head&gt;<br>
+						&nbsp;&nbsp;...<br>
+						&lt;/html&gt;
+					</code>
 					<h4>Description:</h4>
 					<ul>
 						<li>
