--- a/html-common-mistakes.html
+++ b/html-common-mistakes.html
@@ -96,52 +96,44 @@
         <section>
           <h3>Using an element other than &lt;li&gt; inside a &lt;ul&gt; element.</h3>
           <h5>HTML</h5>
-          <div class="code-wrapper">
-            <p>
-              &lt;ul&gt;<br>
-              &nbsp;&nbsp;&lt;h2&gt;...&lt;/h2&gt;<br>
-              &nbsp;&nbsp;&lt;li&gt;...&lt;/li&gt;<br>
-              &nbsp;&nbsp;&lt;p&gt;...&lt;/p&gt;<br>
-              &nbsp;&nbsp;&lt;li&gt;...&lt;/li&gt;<br>
-              &lt;/ul&gt;
-            </p>
-          </div>
+          <code>
+          	&lt;ul&gt;<br>
+           	&nbsp;&nbsp;&lt;h2&gt;...&lt;/h2&gt;<br>
+           	&nbsp;&nbsp;&lt;li&gt;...&lt;/li&gt;<br>
+           	&nbsp;&nbsp;&lt;p&gt;...&lt;/p&gt;<br>
+           	&nbsp;&nbsp;&lt;li&gt;...&lt;/li&gt;<br>
+           	&lt;/ul&gt;
+          </code>
           <p>You can however, put any element inside &lt;li&gt;, like so:</p>
           <h5>HTML</h5>
-          <div class="code-wrapper">
-            <p>
-              &lt;ul&gt;<br>
-              &nbsp;&nbsp;&lt;li&gt;<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;h2&gt;...&lt;/h2&gt;<br>
-              &nbsp;&nbsp;&nbsp;&nbsp;p&gt;...&lt;/p&gt;<br>
-              &nbsp;&nbsp;&lt;/li&gt;<br>
-              &nbsp;&nbsp;&lt;li&gt;...&lt;/li&gt;<br>
-              &lt;/ul&gt;
-            </p>
-          </div>
+          <code>
+          	&lt;ul&gt;<br>
+            &nbsp;&nbsp;&lt;li&gt;<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;h2&gt;...&lt;/h2&gt;<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;p&gt;...&lt;/p&gt;<br>
+            &nbsp;&nbsp;&lt;/li&gt;<br>
+            &nbsp;&nbsp;&lt;li&gt;...&lt;/li&gt;<br>
+            &lt;/ul&gt;
+          </code>
         </section>
         <section>
           <h3>Nesting a block-level element inside a &lt;p&gt; tag.</h3>
           <h5>HTML</h5>
-          <div class="code-wrapper">
-            <p>
-              &lt;p><br>
-              &nbsp;&nbsp;&lt;ul><br>
-              &nbsp;&nbsp;&nbsp;&nbsp;...<br>
-              &nbsp;&nbsp;&lt;/ul><br>
-              &lt;/p>
-            </p>
-          </div>
+          <code>
+          	&lt;p><br>
+            &nbsp;&nbsp;&lt;ul><br>
+            &nbsp;&nbsp;&nbsp;&nbsp;...<br>
+            &nbsp;&nbsp;&lt;/ul><br>
+            &lt;/p>
+          </code>
           <h5>HTML</h5>
-          <div class="code-wrapper">
-            <p>
-              &lt;p><br>
-              &nbsp;&nbsp;&lt;div><br>
-              &nbsp;&nbsp;&nbsp;&nbsp;...<br>
-              &nbsp;&nbsp;&lt;/div><br>
-              &lt;/p>
-            </p>
-          </div>
+          <code>
+          	&lt;p><br>
+            &nbsp;&nbsp;&lt;div><br>
+            &nbsp;&nbsp;&nbsp;&nbsp;...<br>
+            &nbsp;&nbsp;&lt;/div><br>
+            &lt;/p>
+          </code>
           <p>
             You can only nest inline elements such as &lt;span&gt;, &lt;a&gt;, 
             &lt;b&gt;, &lt;strong&gt;, and &lt;img&gt; inside &lt;p&gt; tag. The
