--- a/images.html
+++ b/images.html
@@ -120,11 +120,9 @@
           </p>
           <h4>Basic Syntax</h4>
           <h5>HTML</h5>
-          <div class="code-wrapper">
-            <p>
-              &lt;img src="images/logo.png" alt="logo" height="50" width="50"&gt;
-            </p>
-          </div>
+          <code>
+          	&lt;img src="images/logo.png" alt="logo" height="50" width="50"&gt;
+          </code>
           <p>
             It is recommended to place the image files in a separate folder, not
             in the main site folder which includes all of our HTML and CSS.
@@ -148,63 +146,53 @@
             <li>
               Insert an image
               <h5>HTML</h5>
-              <div class="code-wrapper">
-                <p>
-                  &lt;img src="youtube-logo.png" alt="YouTube"&gt;
-                </p>
-              </div>
+              <code>
+              	&lt;img src="youtube-logo.png" alt="YouTube"&gt;
+              </code>
               <h5>Result</h5>
               <img src="images/youtube-logo.png" alt="YouTube" width="30">
             </li>
             <li>
               Insert an image link
               <h5>HTML</h5>
-              <div class="code-wrapper">
-                <p>
-                  &lt;a href="https://youtube.com&gt;YouTube&lt;img 
-                  src="youtube-logo.png" alt="YouTube"&gt;&lt;/a&gt;
-                </p>
-              </div>
+              <code>
+              	&lt;a href="https://youtube.com&gt;YouTube&lt;img src="youtube-logo.png" alt="YouTube"&gt;&lt;/a&gt;
+              </code>
               <h5>Result</h5>
               <a href="https://youtube.com"><img src="images/youtube-logo.png" alt="YouTube" width="30"></a>
             </li>
             <li>
               Side-by-side images
               <h5>HTML</h5>
-              <div class="code-wrapper">
-                <p>
-                  &lt;ul class="images"&gt;<br>
-                  &nbsp;&nbsp;&lt;li&gt;&lt;img src="images/google-logo.png" alt="Google logo"&gt;&lt;/li&gt;<br>
-                  &nbsp;&nbsp;&lt;li&gt;&lt;img src="images/yandex-logo.png" alt="Yandex logo"&gt;&lt;/li&gt;<br>
-                  &nbsp;&nbsp;&lt;li&gt;&lt;img src="images/amazon-logo.jpg" alt="Amazon logo"&gt;&lt;/li&gt;<br>
-                  &lt;/ul&gt;
-                </p>
-              </div>
+              <code>
+             		&lt;ul class="images"&gt;<br>
+               	&nbsp;&nbsp;&lt;li&gt;&lt;img src="images/google-logo.png" alt="Google logo"&gt;&lt;/li&gt;<br>
+               	&nbsp;&nbsp;&lt;li&gt;&lt;img src="images/yandex-logo.png" alt="Yandex logo"&gt;&lt;/li&gt;<br>
+               	&nbsp;&nbsp;&lt;li&gt;&lt;img src="images/amazon-logo.jpg" alt="Amazon logo"&gt;&lt;/li&gt;<br>
+                &lt;/ul&gt;
+              </code>
               <p>
                 Without CSS, each one of the images displays on top of each other 
                 and has a bullet point. To make the images display side-by-side 
                 and remove the bullets, we need to jump over CSS.
               </p>
               <h5>CSS</h5>
-              <div class="code-wrapper">
-                <p>
-                  .images {<br>
-                  &nbsp;&nbsp;/* Remove bullets */<br>
-                  &nbsp;&nbsp;list-style-type: none;<br>
-                  &nbsp;&nbsp;/* Remove padding */<br>
-                  &nbsp;&nbsp;padding: 0;<br>
-                  }
-                </p>
-               	<p>
-                  .images li {<br>
-                  &nbsp;&nbsp;/* Display images inline */<br>
-                  &nbsp;&nbsp;display: inline;<br>
-                  &nbsp;&nbsp;/* Add a padding on the left so all images aren't 
-                  just pushed right against each other. */<br>
-                  &nbsp;&nbsp;padding-left: 10px;<br>
-                  }
-                </p>
-              </div>
+              <code>
+             		.images {<br>
+                &nbsp;&nbsp;/* Remove bullets */<br>
+                &nbsp;&nbsp;list-style-type: none;<br>
+                &nbsp;&nbsp;/* Remove padding */<br>
+                &nbsp;&nbsp;padding: 0;<br>
+                }<br>
+                <br>
+                .images li {<br>
+                &nbsp;&nbsp;/* Display images inline */<br>
+               	&nbsp;&nbsp;display: inline;<br>
+                &nbsp;&nbsp;/* Add a padding on the left so all images aren't 
+                just pushed right against each other. */<br>
+                &nbsp;&nbsp;padding-left: 10px;<br>
+                }
+              </code>
               <h5>Result</h5>
               <ul class="images">
                 <li><img src="images/google-logo.png" alt="Google logo" width="60"></li>
@@ -226,13 +214,11 @@
             <li>
               <b>background-color</b>
               <h5>CSS</h5>
-              <div class="code-wrapper">
-                <p>
-                  body {<br>
-                  &nbsp;&nbsp;background-color: #5f5f5f;<br>
-                  }
-                </p>
-              </div>
+              <code>
+              	body {<br>
+                &nbsp;&nbsp;background-color: #5f5f5f;<br>
+                }
+              </code>
               <p>
                 Tip: you should always set a background color in case the 
                 background image fails to load. If the background image is dark, 
@@ -242,13 +228,11 @@
             <li>
               <b>background-image</b>
               <h5>CSS</h5>
-              <div class="code-wrapper">
-                <p>
-                  body {<br>
-                  &nbsp;&nbsp;background-image: url(images/foo.png);<br>
-                  }
-                </p>
-              </div>
+              <code>
+          			body {<br>
+                &nbsp;&nbsp;background-image: url(images/foo.png);<br>
+                }
+              </code>
               <p>
                 Tip: check 
                 <a href="https://www.toptal.com/designers/subtlepatterns/">here</a>
@@ -258,13 +242,11 @@
             <li>
               <b>background-position</b>
               <h5>CSS</h5>
-              <div class="code-wrapper">
-                <p>
-                  body {<br>
-                  &nbsp;&nbsp;background-position: <i>value</i>;<br>
-                  }
-                </p>
-              </div>
+             	<code>
+              	body {<br>
+               	&nbsp;&nbsp;background-position: <i>value</i>;<br>
+                }
+              </code>
               <p>where:</p>
               <ul>
                 <li>
@@ -288,14 +270,12 @@
             <li>
               <b>background-repeat</b>
               <h5>CSS</h5>
-              <div class="code-wrapper">
-                <p>
-                  body {<br>
-                  &nbsp;&nbsp;background-position: top left;<br>
-                  &nbsp;&nbsp;background-repeat: repeat/repeat-x/repeat-y/no-repeat;<br>
-                  }
-                </p>
-              </div>
+              <code>
+              	body {<br>
+                &nbsp;&nbsp;background-position: top left;<br>
+                &nbsp;&nbsp;background-repeat: repeat/repeat-x/repeat-y/no-repeat;<br>
+                }
+              </code>
               <p>where:</p>
               <ul>
                 <li>
@@ -318,13 +298,11 @@
             <li>
               <b>background-size</b>
               <h5>CSS</h5>
-              <div class="code-wrapper">
-                <p>
-                  body {<br>
-                  &nbsp;&nbsp;background-size: <i>width height</i> | cover | contain;<br>
-                  }
-                </p>
-              </div>
+              <code>
+              	body {<br>
+               	&nbsp;&nbsp;background-size: <i>width height</i> | cover | contain;<br>
+                }
+             	</code>
               <p>where:</p>
               <ul>
                 <li>
@@ -348,13 +326,11 @@
             property:
           </p>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              body {<br>
-              &nbsp;&nbsp;background: <i>bg-color</i> <i>bg-image</i> <i>bg-position</i>/<i>bg-size</i> <i>bg-repeat</i>;<br>
-              }
-            </p>
-          </div>
+          <code>
+           	body {<br>
+          	&nbsp;&nbsp;background: <i>bg-color</i> <i>bg-image</i> <i>bg-position</i>/<i>bg-size</i> <i>bg-repeat</i>;<br>
+            }
+         	</code>
           <p>
             <b>Note</b>: If one of the properties in the shorthand declaration 
             is the <i>bg-size</i> property, you must use a / (slash) to separate
@@ -370,41 +346,36 @@
             contains a background image, and put text tags inside of it:
           </p>
           <h5>HTML</h5>
-          <div class="code-wrapper">
-            <p>
-              &lt;div class="featured-image"&gt;<br>
-              &nbsp;&nbsp;&lt;!-- Add a text tag of your choice on top of the 
-              featured image --&gt;<br>
-              &nbsp;&nbsp;&lt;p&gt;Sneakers up to 30% off&lt;/p&gt;<br>
-              &lt;/div&gt;
-            </p>
-          </div>
+          <code>
+          	&lt;div class="featured-image"&gt;<br>
+           	&nbsp;&nbsp;&lt;!-- Add a text tag of your choice on top of the 
+           	featured image --&gt;<br>
+           	&nbsp;&nbsp;&lt;p&gt;Sneakers up to 30% off&lt;/p&gt;<br>
+            &lt;/div&gt;
+          </code>
           <h5>CSS</h5>
-          <div class="code-wrapper">
-            <p>
-              .featured-image {<br>
-              &nbsp;&nbsp;/* Actual width of the &lt;div&gt; container */<br>
-              &nbsp;&nbsp;width: 200px;<br>
-              &nbsp;&nbsp;/* Actual height of the &lt;div&gt; container */<br>
-              &nbsp;&nbsp;height: 100px;<br>
-              &nbsp;&nbsp;/* Background image properties */<br>
-              &nbsp;&nbsp;background: #ffffff url(images/sneakers.jpg) 0 0/200px 100px no-repeat;<br>
-              }
-            </p>
-            <p>
-              /* Style the &lt;p&gt; tag by setting various properties */<br>
-              .featured-image p {<br>
-              &nbsp;&nbsp;/* Pink background color */<br>
-              &nbsp;&nbsp;background-color: #ffc0cb;<br>
-              &nbsp;&nbsp;/* Green font color */<br>
-              &nbsp;&nbsp;color: #008000;<br>
-              &nbsp;&nbsp;/* Adjust the padding */<br>
-              &nbsp;&nbsp;padding: 5px 0 5px 0;<br>
-              &nbsp;&nbsp;/* Make the text all uppercase */<br>
-              &nbsp;&nbsp;text-transform: uppercase;<br>
-              }
-            </p>
-          </div>
+          <code>
+          	.featured-image {<br>
+            &nbsp;&nbsp;/* Actual width of the &lt;div&gt; container */<br>
+            &nbsp;&nbsp;width: 200px;<br>
+            &nbsp;&nbsp;/* Actual height of the &lt;div&gt; container */<br>
+            &nbsp;&nbsp;height: 100px;<br>
+            &nbsp;&nbsp;/* Background image properties */<br>
+            &nbsp;&nbsp;background: #ffffff url(images/sneakers.jpg) 0 0/200px 100px no-repeat;<br>
+            }<br>
+            <br>
+            /* Style the &lt;p&gt; tag by setting various properties */<br>
+            .featured-image p {<br>
+            &nbsp;&nbsp;/* Pink background color */<br>
+            &nbsp;&nbsp;background-color: #ffc0cb;<br>
+            &nbsp;&nbsp;/* Green font color */<br>
+            &nbsp;&nbsp;color: #008000;<br>
+            &nbsp;&nbsp;/* Adjust the padding */<br>
+            &nbsp;&nbsp;padding: 5px 0 5px 0;<br>
+            &nbsp;&nbsp;/* Make the text all uppercase */<br>
+            &nbsp;&nbsp;text-transform: uppercase;<br>
+            }
+          </code>
           <h5>Result</h5>
           <div class="featured-image">
             <p>Sneakers up to 30% off</p>
@@ -420,42 +391,37 @@
           </p>
           <h4>Example</h4>
           <h5>HTML</h5>
-          <div class="code-wrapper">
-	          <p>
-	          	&lt;ul class="cakes"&gt;<br>
-							&nbsp;&nbsp;&lt;li&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;img src="images/strawberry-cake.jpg" alt="strawberry cake" height="90"&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;h2&gt;Strawberry Cake&lt;/h2&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;p&gt;Description: This is a dangerously delicious cake!&lt;/p&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;p&gt;Creator: Marios Sofokleous&lt;/p&gt;<br>
-							&nbsp;&nbsp;&lt;/li&gt;<br>
-							&nbsp;&nbsp;&lt;li&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;img src="images/unknown-cake.jpg" alt="unknown cake" height="90"&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;h2&gt;Unknown Cake&lt;/h2&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;p&gt;Description: Chocolate, strawberry, cookies, maltesers ... you name it!&lt;/p&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;&lt;p&gt;Creator: Marios Sofokleous&lt;/p&gt;<br>
-							&nbsp;&nbsp;&lt;/li&gt;<br>
-							&lt;/ul&gt;
-						</p>
-					</div>
+          <code>
+	        	&lt;ul class="cakes"&gt;<br>
+						&nbsp;&nbsp;&lt;li&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;img src="images/strawberry-cake.jpg" alt="strawberry cake" height="90"&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;h2&gt;Strawberry Cake&lt;/h2&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;p&gt;Description: This is a dangerously delicious cake!&lt;/p&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;p&gt;Creator: Marios Sofokleous&lt;/p&gt;<br>
+						&nbsp;&nbsp;&lt;/li&gt;<br>
+						&nbsp;&nbsp;&lt;li&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;img src="images/unknown-cake.jpg" alt="unknown cake" height="90"&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;h2&gt;Unknown Cake&lt;/h2&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;p&gt;Description: Chocolate, strawberry, cookies, maltesers ... you name it!&lt;/p&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&lt;p&gt;Creator: Marios Sofokleous&lt;/p&gt;<br>
+						&nbsp;&nbsp;&lt;/li&gt;<br>
+						&lt;/ul&gt;
+					</code>
 					<h5>CSS</h5>
-          <div class="code-wrapper">
- 						<p>
- 							.cakes {<br>
-							&nbsp;&nbsp;/* Remove bullets */<br>
-							&nbsp;&nbsp;list-style-type: none;<br>
-							}
-						</p>
-						<p>
- 							.cakes img {<br>
- 							&nbsp;&nbsp;/* Float image to the left in order to wrap text around it */<br>
-							&nbsp;&nbsp;float: left;<br>
-							&nbsp;&nbsp;margin-top: 2px;<br>
-  						&nbsp;&nbsp;border-radius: 50%;<br>
-  						&nbsp;&nbsp;border: 1px solid black;<br>
- 							}
- 						</p>
- 					</div>
+          <code>
+ 						.cakes {<br>
+						&nbsp;&nbsp;/* Remove bullets */<br>
+						&nbsp;&nbsp;list-style-type: none;<br>
+						}<br>
+						<br>
+						.cakes img {<br>
+ 						&nbsp;&nbsp;/* Float image to the left in order to wrap text around it */<br>
+						&nbsp;&nbsp;float: left;<br>
+						&nbsp;&nbsp;margin-top: 2px;<br>
+  					&nbsp;&nbsp;border-radius: 50%;<br>
+  					&nbsp;&nbsp;border: 1px solid black;<br>
+ 						}
+ 					</code>
  					<h5>Result</h5>
  					<div class="result-wrapper">
 	 					<ul class="cakes">
