--- a/new-elements.html
+++ b/new-elements.html
@@ -110,25 +110,21 @@
 					</p>
 					<h4>Example</h4>
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;div class="section"&gt;<br>
-							&nbsp;&nbsp;&lt;h2&gt;Blog&lt;/h2&gt;<br>
-							&nbsp;&nbsp;&lt;p&gt;This is the Art Gallery blog.&lt;p&gt;<br>
-							&nbsp;&nbsp;...<br>
-							&lt;/div&gt;
-						</p>
-					</div>
+					<code>
+						&lt;div class="section"&gt;<br>
+						&nbsp;&nbsp;&lt;h2&gt;Blog&lt;/h2&gt;<br>
+						&nbsp;&nbsp;&lt;p&gt;This is the Art Gallery blog.&lt;p&gt;<br>
+						&nbsp;&nbsp;...<br>
+						&lt;/div&gt;
+					</code>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;section&gt;<br>
-							&nbsp;&nbsp;&lt;h2&gt;Blog&lt;/h2&gt;<br>
-							&nbsp;&nbsp;&lt;p&gt;This is the Art Gallery blog.&lt;p&gt;<br>
-							&nbsp;&nbsp;...<br>
-							&lt;/section&gt;
-						</p>
-					</div>
+					<code>
+						&lt;section&gt;<br>
+						&nbsp;&nbsp;&lt;h2&gt;Blog&lt;/h2&gt;<br>
+						&nbsp;&nbsp;&lt;p&gt;This is the Art Gallery blog.&lt;p&gt;<br>
+						&nbsp;&nbsp;...<br>
+						&lt;/section&gt;
+					</code>
 					<p>
 						The HTML5 implementation makes the document more 
 						<strong>semantic</strong>.
@@ -147,25 +143,21 @@
 					</p>
 					<h4>Example:</h4>
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;div class="header"&gt;<br>
-							&nbsp;&nbsp;&lt;h1&gt;Art Gallery Blog&lt;/h1&gt;<br>
-							&nbsp;&nbsp;&lt;p&gt;Covering all the Art Galleries across the globe
-							&lt;/p&gt;<br>
-							&lt;/div&gt;
-						</p>
-					</div>
+					<code>
+						&lt;div class="header"&gt;<br>
+						&nbsp;&nbsp;&lt;h1&gt;Art Gallery Blog&lt;/h1&gt;<br>
+						&nbsp;&nbsp;&lt;p&gt;Covering all the Art Galleries across the globe
+						&lt;/p&gt;<br>
+						&lt;/div&gt;
+					</code>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;header&gt;<br>
-							&nbsp;&nbsp;&lt;h1&gt;Art Gallery Blog&lt;/h1&gt;<br>
-							&nbsp;&nbsp;&lt;p&gt;Covering all the Art Galleries across the globe
-							&lt;/p&gt;<br>
-							&lt;/header&gt;
-						</p>
-					</div>
+					<code>
+						&lt;header&gt;<br>
+						&nbsp;&nbsp;&lt;h1&gt;Art Gallery Blog&lt;/h1&gt;<br>
+						&nbsp;&nbsp;&lt;p&gt;Covering all the Art Galleries across the globe
+						&lt;/p&gt;<br>
+						&lt;/header&gt;
+					</code>>
 					<p>
 						The HTML5 implementation makes the document more 
 						<strong>semantic</strong>.
@@ -183,21 +175,17 @@
 					</p>
 					<h4>Example</h4>
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;div class="footer"&gt;<br>
-							&nbsp;&nbsp;&lt;p&gt;&copy; Art Gallery 2017&lt;/p&gt;<br>
-							&lt;/div&gt;
-						</p>
-					</div>
+					<code>
+						&lt;div class="footer"&gt;<br>
+						&nbsp;&nbsp;&lt;p&gt;&copy; Art Gallery 2017&lt;/p&gt;<br>
+						&lt;/div&gt;
+					</code>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;footer&gt;<br>
-							&nbsp;&nbsp;&lt;p&gt;&copy; Art Gallery 2017&lt;/p&gt;<br>
-							&lt;/footer&gt;
-						</p>
-					</div>
+					<code>
+						&lt;footer&gt;<br>
+						&nbsp;&nbsp;&lt;p&gt;&copy; Art Gallery 2017&lt;/p&gt;<br>
+						&lt;/footer&gt;
+					</code>
 					<p>
 						The HTML5 implementation makes the document more 
 						<strong>semantic</strong>.
@@ -213,18 +201,16 @@
 						element is often used within the "footer".
 					</p>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;footer&gt;<br>
-							&nbsp;&nbsp;&lt;address&gt;<br>
-							&nbsp;&nbsp;&nbsp;&nbsp;By &lt;a 
-							href="mailto:pictureelement@yandex.com"
-							&gt;PictureElement&lt;/a&gt;<br>
-							&nbsp;&nbsp;&lt;/address&gt;<br>
-							&nbsp;&nbsp;&lt;p&gt;Copyright PictureElement 2017&lt;/p&gt;<br>
-							&lt;\footer&gt;
-						</p>
-					</div>
+					<code>
+						&lt;footer&gt;<br>
+						&nbsp;&nbsp;&lt;address&gt;<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;By &lt;a 
+						href="mailto:pictureelement@yandex.com"
+						&gt;PictureElement&lt;/a&gt;<br>
+						&nbsp;&nbsp;&lt;/address&gt;<br>
+						&nbsp;&nbsp;&lt;p&gt;Copyright PictureElement 2017&lt;/p&gt;<br>
+						&lt;\footer&gt;
+					</code>
 				</section>
 				<section>
 					<h3>Aside</h3>
@@ -245,21 +231,17 @@
 						subscribe contents.
 					</p> 
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;div class="sidebar"&gt;<br>
-							&nbsp;&nbsp;...<br>
-							&lt;/div&gt;
-						</p>
-					</div>
+					<code>
+						&lt;div class="sidebar"&gt;<br>
+						&nbsp;&nbsp;...<br>
+						&lt;/div&gt;
+					</code>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;aside&gt;<br>
-							&nbsp;&nbsp;...<br>
-							&lt;/aside&gt;
-						</p>
-					</div>
+					<code>
+						&lt;aside&gt;<br>
+						&nbsp;&nbsp;...<br>
+						&lt;/aside&gt;
+					</code>
 					<p>
 						The HTML5 implementation makes the document more 
 						<strong>semantic</strong>.
@@ -280,23 +262,19 @@
 						Science, Video, Reviews, International Edition).
 					</p> 
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;ul class="nav"&gt;<br>
-							&nbsp;&nbsp;...<br>
-							&lt;/ul&gt;
-						</p>
-					</div>
+					<code>
+						&lt;ul class="nav"&gt;<br>
+						&nbsp;&nbsp;...<br>
+						&lt;/ul&gt;
+					</code>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;nav&gt;<br>
-							&nbsp;&nbsp;&lt;ul&gt;<br>
-					 		&nbsp;&nbsp;&nbsp;&nbsp;...<br>
-					 		&nbsp;&nbsp;&lt;/ul&gt;<br>
-							&lt;/nav&gt;
-						</p>
-					</div>
+					<code>
+						&lt;nav&gt;<br>
+						&nbsp;&nbsp;&lt;ul&gt;<br>
+					 	&nbsp;&nbsp;&nbsp;&nbsp;...<br>
+					 	&nbsp;&nbsp;&lt;/ul&gt;<br>
+						&lt;/nav&gt;
+					</code>
 					<p>
 						The HTML5 implementation makes the document more 
 						<strong>semantic</strong>.
@@ -318,21 +296,17 @@
 					<h4>Examples</h4>
 					<p>Blog post, news story, comment on a post, a review.</p>
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;div class="article"&gt;<br>
-							&nbsp;&nbsp;...<br>
-							&lt;/div&gt;
-						</p>
-					</div>
+					<code>
+						&lt;div class="article"&gt;<br>
+						&nbsp;&nbsp;...<br>
+						&lt;/div&gt;
+					</code>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;article&gt;<br>
-							&nbsp;&nbsp;...<br>
-							&lt;/article&gt;
-						</p>
-					</div>
+					<code>
+						&lt;article&gt;<br>
+						&nbsp;&nbsp;...<br>
+						&lt;/article&gt;
+					</code>
 					<p>
 						The HTML5 implementation makes the document more 
 						<strong>semantic</strong>.
@@ -350,21 +324,17 @@
 					</p>
 					<h4>Example</h4>
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;div class="main"&gt;<br>
-							&nbsp;&nbsp;....<br>
-							&lt;/div&gt;
-						</p>
-					</div>
+					<code>
+						&lt;div class="main"&gt;<br>
+						&nbsp;&nbsp;....<br>
+						&lt;/div&gt;
+					</code>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>	
-							&lt;main&gt;<br>
-							&nbsp;&nbsp;...<br>
-							&lt;/main&gt;
-						</p>
-					</div>
+					<code>
+						&lt;main&gt;<br>
+						&nbsp;&nbsp;...<br>
+						&lt;/main&gt;
+					</code>
 					<p>
 						The HTML5 implementation makes the document more 
 						<strong>semantic</strong>.
@@ -380,21 +350,17 @@
 					</p>
 					<h4>Example</h4>
 					<h5>HTML (Prior to HTML5)</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;div class="image"&gt;<br>
-							&nbsp;&nbsp;&lt;img src="image.png" alt="My picture"&gt;<br>
-							&lt;/div&gt;
-						</p>
-					</div>
+					<code>
+						&lt;div class="image"&gt;<br>
+						&nbsp;&nbsp;&lt;img src="image.png" alt="My picture"&gt;<br>
+						&lt;/div&gt;
+					</code>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;figure&gt;<br>
-							&nbsp;&nbsp;&lt;img src="image.png" alt="My picture"&gt;<br>
-							&lt;/figure&gt;
-						</p>
-					</div>
+					<code>
+						&lt;figure&gt;<br>
+						&nbsp;&nbsp;&lt;img src="image.png" alt="My picture"&gt;<br>
+						&lt;/figure&gt;
+					</code>
 					<p>
 						The HTML5 implementation makes the document more 
 						<strong>semantic</strong>.
@@ -408,15 +374,13 @@
 					</p>
 					<h4>Example</h4> 
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;figure&gt;<br>
-							&nbsp;&nbsp;&lt;img src="image.png" alt="My picture"&gt;<br>
-							&nbsp;&nbsp;&lt;figcaption&gt;This is a caption for the picture.
-							&lt;/figcaption&gt;<br>
-							&lt;/figure&gt;
-						</p>
-					</div>
+					<code>
+						&lt;figure&gt;<br>
+						&nbsp;&nbsp;&lt;img src="image.png" alt="My picture"&gt;<br>
+						&nbsp;&nbsp;&lt;figcaption&gt;This is a caption for the picture.
+						&lt;/figcaption&gt;<br>
+						&lt;/figure&gt;
+					</code>
 					<p>
 						The HTML5 implementation makes the document more 
 						<strong>semantic</strong>.
@@ -430,15 +394,17 @@
 					</p>
 					<h4>Example</h4> 
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>&lt;time&gt;2013-09-16&lt;/time&gt;</p>
-						<p>
-							We can use the "datetime" attribute to get our desired format:<br>
-							&lt;time datetime="2013-09-16"&gt;16/09/13&lt;/time&gt;<br>
-							&lt;time datetime="2013-09-16"&gt;September 16, 2013&lt;/time&gt;<br>
-							...
-						</p>
-					</div>
+					<code>
+						&lt;time&gt;2013-09-16&lt;/time&gt;<br>
+					</code>
+					<p>
+						We can use the "datetime" attribute to get our desired format:<br>
+					</p>
+					<code>
+						&lt;time datetime="2013-09-16"&gt;16/09/13&lt;/time&gt;<br>
+						&lt;time datetime="2013-09-16"&gt;September 16, 2013&lt;/time&gt;<br>
+						...
+					</code>
 					<p>
 						The HTML5 implementation makes the document more 
 						<strong>semantic</strong>.
