--- a/new-input-attributes.html
+++ b/new-input-attributes.html
@@ -131,14 +131,12 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;input type="text" name="first-name" 
-							placeholder="First name"&gt;<br>
-							&lt;input type="text" name="last-name" placeholder="Last name"&gt;<br>
-							&lt;input type="text" name="mail" placeholder="E-mail"&gt;
-						</p>
-					</div>
+					<code>						
+						&lt;input type="text" name="first-name" 
+						placeholder="First name"&gt;<br>
+						&lt;input type="text" name="last-name" placeholder="Last name"&gt;<br>
+						&lt;input type="text" name="mail" placeholder="E-mail"&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -157,15 +155,13 @@
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Username:&lt;input type="text" name="username" 
-							autofocus&gt;<br>
-							&nbsp;&nbsp;Password:&lt;input type="password" name=:"psw"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Username:&lt;input type="text" name="username" 
+						autofocus&gt;<br>
+						&nbsp;&nbsp;Password:&lt;input type="password" name=:"psw"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -185,18 +181,16 @@
 					</p>
 					<h4>Example</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-				  		&nbsp;&nbsp;Username: &lt;input type="text" name="username" 
-				  		required&gt;<br>
-				  		&nbsp;&nbsp;&lt;input type="submit"&gt;<br>
-				  		&nbsp;&nbsp;Password: &lt;input type="password" name="userpsw" 
-				  		required&gt;<br>
-				  		&nbsp;&nbsp;&lt;input type="submit"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+				  	&nbsp;&nbsp;Username: &lt;input type="text" name="username" 
+				  	required&gt;<br>
+				  	&nbsp;&nbsp;&lt;input type="submit"&gt;<br>
+				  	&nbsp;&nbsp;Password: &lt;input type="password" name="userpsw" 
+				  	required&gt;<br>
+				  	&nbsp;&nbsp;&lt;input type="submit"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
@@ -216,14 +210,12 @@
 					</p>
 					<h4>Example #1</h4>
 					<h5>HTML5</h5>
-					<div class="code-wrapper">
-						<p>
-							&lt;form&gt;<br>
-							&nbsp;&nbsp;Country code: &lt;input type="text" name="two-letter_country_code" pattern="[A-Za-z]{2}" title="Two-letter country code"&gt;<br>
-							&nbsp;&nbsp;Telephone: &lt;input type="tel" name="tel_number" pattern="[0-9]{10}" title="10-digit tel. number"&gt;<br>
-							&lt;/form&gt;
-						</p>
-					</div>
+					<code>
+						&lt;form&gt;<br>
+						&nbsp;&nbsp;Country code: &lt;input type="text" name="two-letter_country_code" pattern="[A-Za-z]{2}" title="Two-letter country code"&gt;<br>
+						&nbsp;&nbsp;Telephone: &lt;input type="tel" name="tel_number" pattern="[0-9]{10}" title="10-digit tel. number"&gt;<br>
+						&lt;/form&gt;
+					</code>
 					<h5>Result</h5>
 					<div class="result-wrapper">
 						<form>
